@@ -110,6 +110,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+    HADOOP-1266. Remove dependency of package org.apache.hadoop.net on 
+    org.apache.hadoop.dfs.  (Hairong Kuang via dhruba)
+
     HADOOP-1779. Replace INodeDirectory.getINode() by a getExistingPathINodes()
     to allow the retrieval of all existing INodes along a given path in a
     single lookup. This facilitates removal of the 'parent' field in the
